New-style java.